<resources>
    <string name="app_name">FascinatingManager</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_connections">FascinatingManager</string>
    <string name="menu_action_selectAll">Select All</string>
    <string name="drawer_slogan">A Free and Open-source mysql manager!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_add_connection">Add Conection</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_about">About FascinatingManager</string>
    <string name="drawer_github">GitHub</string>
    <string name="drawer_contact_me">Contact Me</string>
    <string name="drawer_connections">Connections</string>


    <string name="add_connection_text_of_name_label">Name:</string>
    <string name="add_connection_text_of_comment_label">Comment:</string>
    <string name="add_connection_text_of_address_label">Address:</string>
    <string name="add_connection_text_of_user_label">User:</string>
    <string name="add_connection_text_of_password_label">Password:</string>
    <!--hints-->
    <string name="add_connection_hint_of_comment">Enter a brief comment</string>
    <string name="add_connection_hint_of_name">Enter your name here</string>
    <string name="add_connection_hint_of_user">Enter user</string>
    <string name="add_connection_hint_of_address">Enter address</string>
    <string name="add_connection_hint_of_password">Enter password</string>
    <string name="test">test</string>
    <string name="confirm">confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_me">AboutMeActivity</string>
    <string name="title_activity_contact_me">Contact Me</string>
    <string name="port">port</string>
    <string name="tables">tables</string>
    <string name="functions">functions</string>
    <string name="views">views</string>
    <string name="events">events</string>
    <string name="building">building</string>
    <string name="No_table">No table found</string>
    <string name="rows_show_in_each_selection">Rows show ins each selection:</string>
    <string name="submit">Submit!</string>
    <string name="time_out">time out:</string>
</resources>

