<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="science.denghaoyu.fascinatingmanager.fragments.AddConnectionFragment">
            <!--header, includes name and comment-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="6">
                <!--to show head letter-->
                <TextView
                    android:id="@+id/add_connection_head_letter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:text="A"
                    android:fontFamily="@font/swiss911"
                    android:gravity="center"
                    android:textSize="50dp"
                    android:layout_gravity="center"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="20">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/add_connection_text_of_name_label" />

                            <EditText
                                android:id="@+id/add_connection_name"
                                style="@style/Widget.AppCompat.EditText"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:background="@null"
                                android:hint="@string/add_connection_hint_of_name"
                                android:singleLine="true" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/add_connection_text_of_comment_label"
                                />
                            <EditText
                                android:id="@+id/add_connection_comment"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="7"
                                android:background="@null"
                                android:hint="@string/add_connection_hint_of_comment"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/add_connection_text_of_address_label" />

                    <EditText
                        android:id="@+id/add_connection_address"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:hint="@string/add_connection_hint_of_address"
                        android:background="@null"
                        android:singleLine="true"
                        android:text="localhost" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/add_connection_text_of_user_label" />

                    <EditText
                        android:id="@+id/add_connection_user"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:hint="@string/add_connection_hint_of_user"
                        android:singleLine="true"
                        android:text="root" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/add_connection">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/port" />

                    <EditText
                        android:id="@+id/add_connection_port"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:hint="@string/add_connection_hint_of_user"
                        android:singleLine="true"
                        android:text="3306" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/add_connection_text_of_password_label" />

                    <EditText
                        android:id="@+id/add_connection_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:ems="10"
                        android:background="@null"
                        android:hint="@string/add_connection_hint_of_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </LinearLayout>

            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_connection_test"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/test"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/add_connection_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"/>

</LinearLayout>
